# aviationapp

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AviationApp.sln  CMakeLists.txt  README.md  main.cpp  main.qml  main.qrc  squircle.cpp  squircle.h
AviationApp/AviationApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  AssemblyInfo.cs  AviationApp.csproj  MainPage.xaml  MainPage.xaml.cs  TaskExtensions.cs
AviationApp/AviationApp.Android/: AviationApp.Android.csproj  MainActivity.cs
AviationApp/AviationApp.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
AviationApp/AviationApp.Android/Resources/: Resource.designer.cs
AviationApp/AviationApp.UWP/: App.xaml  App.xaml.cs  AviationApp.UWP.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
AviationApp/AviationApp.UWP/Properties/: AssemblyInfo.cs
AviationApp/AviationApp.UnitTests/: AviationApp.UnitTests.csproj
AviationApp/AviationApp.UnitTests/FAADataParser/Aff/: TestAff1.cs  TestAff3.cs
AviationApp/AviationApp.UnitTests/FAADataParser/Apt/: TestApt.cs
AviationApp/AviationApp.UnitTests/FAADataParser/Fixes/: TestFix1.cs
AviationApp/AviationApp.UnitTests/FAADataParser/Utils/: TestFAADataParserGeneric.cs  TestParseLatitudeLongitude.cs  TestParsePhone.cs
AviationApp/AviationApp.iOS/: AppDelegate.cs  AviationApp.iOS.csproj  Info.plist  Main.cs
AviationApp/AviationApp.iOS/Properties/: AssemblyInfo.cs
AviationApp/AviationApp/Assets/Fonts/: MaterialFontGlyphs.cs
AviationApp/AviationApp/Database/: Database.cs
AviationApp/AviationApp/FAADataParser/: Cycle.cs
AviationApp/AviationApp/FAADataParser/Aff/: Aff.cs  Aff1.cs  Aff2.cs  Aff3.cs  Aff4.cs  AffFileParser.cs  ArtccFacility.cs  ArtccFrequencyInformation.cs  FacilityTypeParser.cs
AviationApp/AviationApp/FAADataParser/Apt/: AirportOwnershipTypeParser.cs  Apt.cs  FacilityUseParser.cs  LandingFacilityTypeParser.cs  MagVarParser.cs  SurveyMethodParser.cs
AviationApp/AviationApp/Pages/: AirportInformationPage.xaml  AirportInformationPage.xaml.cs  BriefingPage.xaml  BriefingPage.xaml.cs  ChecklistsPage.xaml  ChecklistsPage.xaml.cs  FlightComputerPage.xaml  FlightComputerPage.xaml.cs  LogbookPage.xaml  LogbookPage.xaml.cs  MapPage.xaml  MapPage.xaml.cs  PlanningPage.xaml  PlanningPage.xaml.cs  ScratchpadPage.xaml  ScratchpadPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  WeightAndBalancePage.xaml  WeightAndBalancePage.xaml.cs
AviationApp/AviationApp/Utilities/Units/: Length.cs  (+2 more)
AviationApp/AviationApp/WeightAndBalance/: FuelStationView.cs  FuelStationView.xaml  FuelStationView.xaml.cs  FuelView.xaml  FuelView.xaml.cs  FuelViewModel.cs  LoadSheet.cs  LoadSheetViewModel.cs  WeightAndBalancePage.xaml  WeightAndBalancePage.xaml.cs
cmake/: CMakeLists.txt  buildenv.cmake  vcpkg.cmake  vcpkg.nanogui.patch  vcpkg.triplets.patch
qml/: main.qml  map.qml  planning.qml  wb.qml
src/: main.cpp
(+12 files in other folders)
